# lps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py  examGUI.py
src/processes/: another_test.py  kiosk_browser.py  process_identification.py  process_tracking.py  processes.py  test.py  whitelist_mitm.py
src/proctoring/: __init__.py  proctoring.py
src/proctoring/browser/: __init__.py  browser.py  kiosk_browser.py  whitelist.txt  whitelist_mitm.py
src/proctoring/examGUI/: __init__.py  examGUI.py
src/proctoring/eyetracker/: __init__.py  eyetracker.py
src/proctoring/gaze/: __init__.py  gaze.py
src/proctoring/processes/: __init__.py  independent_testing.py  processes.py  whitelist.txt
src/proctoring/report/: report.py
tests/: test_gaze.py
