[project]
name = "proctoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Nord Lundström",email = "vnl@kth.se"},
    {name = "Temuulen Molomjamts", email = "temmol@kth.se"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "dlib (>=19.24.6,<20.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "plyer (>=2.1.0,<3.0.0)",
    "dbus-python (>=1.4.0,<2.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]  
addopts = "-p no:warnings"
